--- a/StudentInterface/App.xaml
+++ b/StudentInterface/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Student.Interface.App"
+﻿<Application x:Class="StudentInterface.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Student.Interface"
+             xmlns:local="clr-namespace:StudentInterface"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
