--- a/StudentInterface/MainWindow.xaml
+++ b/StudentInterface/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="1250">
     <Grid>
-        <DataGrid x:Name="DataGrid" FontSize="15px" Margin="5" AutoGenerateColumns="False" IsReadOnly="True">
+        <DataGrid x:Name="DataGrid" FontSize="15px" Margin="5" AutoGenerateColumns="False"  IsReadOnly="True">
             <DataGrid.Columns >
                 <DataGridTextColumn x:Name="NumID" Header="ID"  Binding="{Binding  Id}" />
                 <DataGridTextColumn Header="Фамилия" Binding="{Binding Fio.Surname}" />
@@ -24,7 +24,7 @@
                 <DataGridTextColumn Header="Группа" Binding="{Binding Curriculum.Group}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button Content="Удалить" HorizontalAlignment="Left" Margin="0,517,0,0" VerticalAlignment="Top" Height="44" Width="313" FontSize="18" Click="Delete_Click"/>
+        <Button x:Name="but_del" Content="Удалить" HorizontalAlignment="Left" Margin="0,517,0,0" VerticalAlignment="Top" Height="44" Width="313" FontSize="18" Click="Delete_Click" KeyDown="Button_KeyDown"/>
         <Button Content="Добавить" HorizontalAlignment="Left" Margin="937,517,0,0" VerticalAlignment="Top" Height="46" Width="313" FontSize="18" Click="Add_Click"/>
         <Label Content="Введите ID записи:" HorizontalAlignment="Left" Margin="0,486,0,0" VerticalAlignment="Top" Width="131" FontSize="14"/>
         <TextBox x:Name="LineId" HorizontalAlignment="Left" Margin="136,486,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Height="26"/>
