--- a/StudentInterface/MainWindow.xaml
+++ b/StudentInterface/MainWindow.xaml
@@ -5,9 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentInterface"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1250">
+        Title="MainWindow" Height="600" Width="1250" Closing="Window_Closing">
     <Grid>
-        <DataGrid x:Name="DataGrid" FontSize="15px" Margin="5" AutoGenerateColumns="False"  IsReadOnly="True">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1103*"/>
+            <ColumnDefinition Width="147*"/>
+        </Grid.ColumnDefinitions>
+        <DataGrid x:Name="DataGrid" FontSize="15px" Margin="5,5,5,5" AutoGenerateColumns="False"  IsReadOnly="True" Grid.ColumnSpan="2">
             <DataGrid.Columns >
                 <DataGridTextColumn x:Name="NumID" Header="ID"  Binding="{Binding  Id}" />
                 <DataGridTextColumn Header="Фамилия" Binding="{Binding Fio.Surname}" />
@@ -25,7 +29,7 @@
             </DataGrid.Columns>
         </DataGrid>
         <Button x:Name="but_del" Content="Удалить" HorizontalAlignment="Left" Margin="0,517,0,0" VerticalAlignment="Top" Height="44" Width="313" FontSize="18" Click="Delete_Click" KeyDown="Button_KeyDown"/>
-        <Button Content="Добавить" HorizontalAlignment="Left" Margin="937,517,0,0" VerticalAlignment="Top" Height="46" Width="313" FontSize="18" Click="Add_Click"/>
+        <Button Content="Добавить" HorizontalAlignment="Left" Margin="937,517,0,0" VerticalAlignment="Top" Height="46" Width="313" FontSize="18" Click="Add_Click" Grid.ColumnSpan="2"/>
         <Label Content="Введите ID записи:" HorizontalAlignment="Left" Margin="0,486,0,0" VerticalAlignment="Top" Width="131" FontSize="14"/>
         <TextBox x:Name="LineId" HorizontalAlignment="Left" Margin="136,486,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Height="26"/>
     </Grid>
