--- a/StudentInterface/MainWindow.xaml
+++ b/StudentInterface/MainWindow.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentInterface"
         mc:Ignorable="d"
-        Title="StudentInterface" Height="600" Width="1250" Closing="Window_Closing">
+        Title="StudentInterface" Height="600" Width="1250">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1103*"/>
             <ColumnDefinition Width="147*"/>
         </Grid.ColumnDefinitions>
-        <DataGrid x:Name="DataGrid" FontSize="15px" Margin="5,5,5,5" AutoGenerateColumns="False"  IsReadOnly="True" Grid.ColumnSpan="2">
+        <DataGrid x:Name="DataGrid" FontSize="15px" Margin="10,10,10,100" AutoGenerateColumns="False"  IsReadOnly="True" Grid.ColumnSpan="2">
             <DataGrid.Columns >
                 <DataGridTextColumn x:Name="NumID" Header="ID"  Binding="{Binding  Id}" />
                 <DataGridTextColumn Header="Фамилия" Binding="{Binding Fio.Surname}" />
@@ -28,10 +28,11 @@
                 <DataGridTextColumn Header="Группа" Binding="{Binding Curriculum.Group}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="but_del" Content="Удалить" HorizontalAlignment="Left" Margin="0,517,0,0" VerticalAlignment="Top" Height="44" Width="313" FontSize="18" Click="Delete_Click" KeyDown="Button_KeyDown"/>
-        <Button Content="Добавить" HorizontalAlignment="Left" Margin="937,517,0,0" VerticalAlignment="Top" Height="46" Width="313" FontSize="18" Click="Add_Click" Grid.ColumnSpan="2"/>
+        <Button x:Name="but_del" Content="Удалить" HorizontalAlignment="Left" Margin="468,517,0,0" VerticalAlignment="Top" Height="35" Width="314" FontSize="19" Click="Delete_Click"/>
+        <Button Content="Добавить" HorizontalAlignment="Left" Margin="468,477,0,0" VerticalAlignment="Top" Height="35" Width="314" FontSize="18" Click="Add_Click"/>
         <Label Content="Введите ID записи :" HorizontalAlignment="Left" Margin="0,486,0,0" VerticalAlignment="Top" Width="156" FontSize="14"/>
         <TextBox x:Name="LineId" HorizontalAlignment="Left" Margin="136,486,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="177" Height="26"/>
-        <Button x:Name="but_Exit" Content="Выйти" HorizontalAlignment="Left" Margin="468,517,0,0" VerticalAlignment="Top" Height="44" Width="314" FontSize="18" Click="but_Ex" KeyDown="Button_KeyDown"/>
+        <Button x:Name="but_Exit" Content="Выйти" HorizontalAlignment="Left" Margin="926,517,0,0" VerticalAlignment="Top" Height="44" Width="314" FontSize="18" Click="but_Ex" Grid.ColumnSpan="2"/>
+        <Button Content="Редактировать" HorizontalAlignment="Left" Margin="10,517,0,0" VerticalAlignment="Top" Height="46" Width="313" FontSize="18" Click="Edit_Click"/>
     </Grid>
 </Window>
