--- a/StudentInterface/MainWindow.xaml
+++ b/StudentInterface/MainWindow.xaml
@@ -28,9 +28,9 @@
                 <DataGridTextColumn Header="Группа" Binding="{Binding Curriculum.Group}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="but_del" Content="Удалить" HorizontalAlignment="Left" Margin="468,517,0,0" VerticalAlignment="Top" Height="35" Width="314" FontSize="19" Click="Delete_Click"/>
-        <Button Content="Добавить" HorizontalAlignment="Left" Margin="468,477,0,0" VerticalAlignment="Top" Height="35" Width="314" FontSize="18" Click="Add_Click"/>
-        <Button x:Name="but_Exit" Content="Выйти" HorizontalAlignment="Left" Margin="926,517,0,0" VerticalAlignment="Top" Height="44" Width="314" FontSize="18" Click="Exit_but" Grid.ColumnSpan="2"/>
-        <Button Content="Редактировать" HorizontalAlignment="Left" Margin="0,516,0,0" VerticalAlignment="Top" Height="46" Width="313" FontSize="18" Click="Edit_Click"/>
+        <Button x:Name="but_del" Content="Удалить" HorizontalAlignment="Left" Margin="468,517,0,0" VerticalAlignment="Top" Height="35" Width="314" FontSize="19" Click="DeleteButton"/>
+        <Button Content="Добавить" HorizontalAlignment="Left" Margin="468,477,0,0" VerticalAlignment="Top" Height="35" Width="314" FontSize="18" Click="AddButton"/>
+        <Button x:Name="but_Exit" Content="Выйти" HorizontalAlignment="Left" Margin="926,517,0,0" VerticalAlignment="Top" Height="44" Width="314" FontSize="18" Click="ExitButton" Grid.ColumnSpan="2"/>
+        <Button Content="Редактировать" HorizontalAlignment="Left" Margin="0,516,0,0" VerticalAlignment="Top" Height="46" Width="313" FontSize="18" Click="EditButton"/>
     </Grid>
 </Window>
